OpenBurnBarCore/Sources/OpenBurnBarDomainCore/Generated/openburnbar_domain_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_openburnbar_domain_ffi_fn_func_calculate_token_cost_nano_usd(RustBuffer rates, RustBuffer buckets, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aad_v1(RustBuffer uid, RustBuffer collection, RustBuffer doc_id, RustBuffer field, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aad_v2(RustBuffer uid, RustBuffer collection, RustBuffer doc_id, RustBuffer field, uint32_t schema_version, RustBuffer purpose, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_combined(RustBuffer combined, RustBuffer key, RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_detached(RustBuffer nonce, RustBuffer ciphertext, RustBuffer tag, RustBuffer key, RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_text_detached(RustBuffer nonce, RustBuffer ciphertext, RustBuffer tag, RustBuffer key, RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_seal_combined(RustBuffer plaintext, RustBuffer key, RustBuffer nonce, RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_seal_detached(RustBuffer plaintext, RustBuffer key, RustBuffer nonce, RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_base64_decode_strict(RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_base64_encode(RustBuffer data, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_assemble_wire(RustBuffer ephemeral_public_key, RustBuffer aes_gcm_combined, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_open(RustBuffer wire, RustBuffer shared_secret, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_seal(RustBuffer plaintext, RustBuffer ephemeral_public_key, RustBuffer shared_secret, RustBuffer nonce, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_split_wire(RustBuffer wire, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_wrapping_key(RustBuffer shared_secret, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_expected_session_body_hash(RustBuffer data, RustBuffer key, uint32_t body_hash_version, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_key_id(RustBuffer key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_keyed_hash_hex(RustBuffer data, RustBuffer key, RustBuffer purpose, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_normalize_recovery_key(RustBuffer recovery_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_pensieve_dedup_hash(RustBuffer plaintext, RustBuffer key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_pensieve_slug_hmac(RustBuffer slug, RustBuffer key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_project_memory_doc_id(RustBuffer slug, RustBuffer key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_open_vault_key(RustBuffer combined, RustBuffer recovery_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_verification_hash(RustBuffer recovery_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_wrap_vault_key(RustBuffer vault_key, RustBuffer recovery_key, RustBuffer nonce, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_wrapping_key(RustBuffer recovery_key, RustCallStatus *_Nonnull out_status
);