tools/openburnbar-mcp/vendor/openburnbar-domain-core-python/openburnbar_domain_ffi.py


_UniffiLib = _uniffi_load_indirect()
_UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_int8,
)
_UNIFFI_FOREIGN_FUTURE_FREE = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiForeignFuture(ctypes.Structure):
    _fields_ = [
        ("handle", ctypes.c_uint64),
        ("free", _UNIFFI_FOREIGN_FUTURE_FREE),
    ]
class _UniffiForeignFutureStructU8(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint8),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U8 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU8,
)
class _UniffiForeignFutureStructI8(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int8),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I8 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI8,
)
class _UniffiForeignFutureStructU16(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint16),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U16 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU16,
)
class _UniffiForeignFutureStructI16(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int16),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I16 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI16,
)
class _UniffiForeignFutureStructU32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint32),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU32,
)
class _UniffiForeignFutureStructI32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int32),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI32,
)
class _UniffiForeignFutureStructU64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint64),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU64,
)
class _UniffiForeignFutureStructI64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int64),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI64,
)
class _UniffiForeignFutureStructF32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_float),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_F32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructF32,
)
class _UniffiForeignFutureStructF64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_double),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_F64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructF64,
)
class _UniffiForeignFutureStructPointer(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_void_p),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_POINTER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructPointer,
)
class _UniffiForeignFutureStructRustBuffer(ctypes.Structure):
    _fields_ = [
        ("return_value", _UniffiRustBuffer),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_RUST_BUFFER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructRustBuffer,
)
class _UniffiForeignFutureStructVoid(ctypes.Structure):
    _fields_ = [
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_VOID = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructVoid,
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_calculate_token_cost_nano_usd.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_calculate_token_cost_nano_usd.restype = ctypes.c_uint64
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aad_v1.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aad_v1.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aad_v2.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.c_uint32,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aad_v2.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_combined.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_combined.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_detached.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_detached.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_text_detached.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_open_text_detached.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_seal_combined.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_seal_combined.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_seal_detached.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_aes_gcm_seal_detached.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_base64_decode_strict.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_base64_decode_strict.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_base64_encode.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_base64_encode.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_assemble_wire.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_assemble_wire.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_open.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_open.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_seal.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_seal.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_split_wire.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_split_wire.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_wrapping_key.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_escrow_wrapping_key.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_expected_session_body_hash.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.c_uint32,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_expected_session_body_hash.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_key_id.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_key_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_keyed_hash_hex.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_keyed_hash_hex.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_normalize_recovery_key.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_normalize_recovery_key.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_pensieve_dedup_hash.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_pensieve_dedup_hash.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_pensieve_slug_hmac.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_pensieve_slug_hmac.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_project_memory_doc_id.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_project_memory_doc_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_open_vault_key.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_open_vault_key.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_verification_hash.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_verification_hash.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_wrap_vault_key.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_wrap_vault_key.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_wrapping_key.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_recovery_wrapping_key.restype = _UniffiRustBuffer
